fixed input fields and dropdown styling, added header to Chart component, final styling and spacing tweaks

--- a/client/stylesheets/_variables.scss
+++ b/client/stylesheets/_variables.scss
@@ -17,8 +17,8 @@ $tertiary-green: #C9CBA7;
 $light-gray: #F5F5F5;
 
 // Main Area Buttons
-$orange: #FF833A;
-
+// $orange: #FF833A;
+$orange: orange;
 
 // chart
 $rust: #C15C2A;
